--- a/options.html
+++ b/options.html
@@ -28,8 +28,8 @@ Allows user to adjust filtration settings.
 		</div>
 		<div id="footer">
 			<p>This work is licensed under <a
-        href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>. Created by <a
-      href="http://brooklynhacker.com">Rob Spectre</a>. Lovingly crafted in Brooklyn, NY.</p>
+        href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>. Modified from Trump-Filter by <a
+      href="http://brooklynhacker.com">Rob Spectre</a> by Jonathan Jackson</p>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/options.js"></script>
