--- a/options.html
+++ b/options.html
@@ -29,7 +29,7 @@ Allows user to adjust filtration settings.
 		<div id="footer">
 			<p>This work is licensed under <a
         href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>. Modified from Trump-Filter by <a
-      href="http://brooklynhacker.com">Rob Spectre</a> by Jonathan Jackson</p>
+      href="http://brooklynhacker.com">Rob Spectre</a> by <a href="http://jonathanrjackson.com">bgjj04</a></p>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/options.js"></script>
